--- a/htroot/env/templates/metas.template
+++ b/htroot/env/templates/metas.template
@@ -13,7 +13,7 @@
   <link href="#[relativeBase]#env/bootstrap/css/bootstrap.min.css" rel="stylesheet">
   <link href="#[relativeBase]#env/bootstrap/css/bootstrap-switch.min.css" rel="stylesheet">
   
-  <script>
+  <script type="text/typescript">
 /*
 @licstart  The following is the entire license notice for the 
 JavaScript code in this page.
@@ -41,20 +41,20 @@ for the JavaScript code in this page.
 */
   </script>
 
-  <script src="#[relativeBase]#env/bootstrap/js/jquery.min.js" defer="defer" async="async"></script>
-  <script src="#[relativeBase]#env/bootstrap/js/bootstrap.min.js" defer="defer" async="async"></script>
-  <script src="#[relativeBase]#env/bootstrap/js/bootstrap-switch.min.js" defer="defer" async="async"></script>
+  <script type="text/typescript" src="#[relativeBase]#env/bootstrap/js/jquery.min.js" defer="defer" async="async"></script>
+  <script type="text/typescript" src="#[relativeBase]#env/bootstrap/js/bootstrap.min.js" defer="defer" async="async"></script>
+  <script type="text/typescript" src="#[relativeBase]#env/bootstrap/js/bootstrap-switch.min.js" defer="defer" async="async"></script>
   
   <!-- Custom styles for this template, i.e. navigation (move this to base.css) -->
   <link href="#[relativeBase]#env/bootstrap-base.css" rel="stylesheet">
   
-  <script src="https://unpkg.com/react@17/umd/react.development.js"></script>
-  <script src="https://unpkg.com/react-dom@17/umd/react-dom.development.js"></script>
+  <script type="text/javascript" src="#[relativeBase]#env/typescript/typescript.min.js"></script>
+  <script type="text/javascript" src="#[relativeBase]#env/typescript/typescript.compile.min.js"></script>
   
   <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
   <!--[if lt IE 9]>
-    <script async="async" defer="defer" src="#[relativeBase]#env/bootstrap/js/html5shiv.min.js"></script>
-    <script async="async" defer="defer" src="#[relativeBase]#env/bootstrap/js/respond.min.js"></script>
+    <script type="text/typescript" src="#[relativeBase]#env/bootstrap/js/html5shiv.min.js" async="async" defer="defer"></script>
+    <script type="text/typescript" src="#[relativeBase]#env/bootstrap/js/respond.min.js" async="async" defer="defer"></script>
   <![endif]-->
 
   <!-- old css styles -->
